# esp32s3-lvgl-terminal-recode

./: LICENSE  README.md  platformio.ini
SquareLine_Project/: SquareLine_Project.sll  SquareLine_Project.spj
hardware/: BOM_PCB_基于ESP32S3的智能终端.xlsx
src/: config.cpp  config.h  data.cpp  data.h  main.cpp  music.cpp  music.h  task.h  (+7 more)
src/ui/src/: CMakeLists.txt  filelist.txt  ui.cpp  ui.h
src/ui/src/images/: ui_img_about_luoxiaohei1_png.c  ui_img_about_luoxiaohei2_png.c  ui_img_about_luoxiaohei3_png.c  ui_img_about_message_png.c  ui_img_about_released_png.c  ui_img_back_pressed_png.c  ui_img_back_released_png.c  ui_img_cal_released_png.c  ui_img_game_pressed_png.c  ui_img_game_released_png.c  ui_img_gpt_pressed_png.c  ui_img_gpt_released_png.c  ui_img_music_pause_png.c  ui_img_music_play_png.c  ui_img_music_pressed_png.c  ui_img_music_released_png.c  ui_img_musicchange_pressed_png.c  ui_img_musicchange_released_png.c  ui_img_serial_pressed_png.c  ui_img_serial_released_png.c  ui_img_serialdelete_pressed_png.c  ui_img_serialdelete_released_png.c  ui_img_serialsend_pressed_png.c  ui_img_serialsend_released_png.c  ui_img_set_pressed_png.c  ui_img_set_released_png.c  ui_img_weather_code_png.c  ui_img_weather_location_png.c  ui_img_weather_pressed_png.c  ui_img_weather_released_png.c  ui_img_weather_temp_png.c  ui_img_weatherupdate_pressed_png.c  ui_img_weatherupdate_released_png.c  ui_img_wifi_pressed_png.c  ui_img_wifi_released_png.c
src/ui/src/screens/: ui_About.c  ui_Cal.c  ui_GPT.c  ui_Game.c  ui_GameSon.c  ui_Main.c  ui_Music.cpp  ui_Serial.c  ui_Set.c  ui_Weather.c
(+8 files in other folders)
